# mining-media-data-ii-project-2

./: .gitignore  Makefile  PROJECT_STRUCTURE.md  Pipfile  README.md  analyze_data.py  config.yaml  evaluate.py  pyproject.toml  requirements.txt  setup.py  train.py
data/evaluation/: README.md  sent_evaluate_CED.py
llm/: README.md  __init__.py  evaluate_llm.py  models.py  prompts.py
pipeline/: __init__.py  base.py  data_analysis.py  evaluation.py  main.py  prediction.py  training.py
results/: combined_train_en-cs.tsv  data_analysis_results.json  evaluation_en-cs_distilbert.tsv  evaluation_en-de_distilbert.tsv  evaluation_en-ja_distilbert.tsv  evaluation_en-zh_distilbert.tsv  evaluation_metadata_en-cs_distilbert.json  evaluation_metadata_en-de_distilbert.json  evaluation_metadata_en-ja_distilbert.json  evaluation_metadata_en-zh_distilbert.json  evaluation_results.json  prediction_results.json  training_results.json  training_results_20250630_144544_en-de.json  training_results_20250630_163046_en-de.json  training_results_20250630_222238_en-cs.json  training_results_20250630_222257_en-ja.json  training_results_20250630_222345_en-de.json  training_results_20250630_222421_en-zh.json
results/checkpoints/: training_history.json  training_history_20250630_144531_en-de.json  training_history_20250630_145001_en-de.json  training_history_20250630_221757_en-cs.json  (+3 more)
scripts/: analyze_data.py  check_llm_performance.py  check_model_performance.py  evaluate.py  plot_llm_results.py  run_pipeline.py  setup_dev.sh  test_all_languages.sh  train.py
src/: __init__.py  runner.py
(+43 files in other folders)
